@@ -7,8 +7,8 @@
  *
  * -----------------------------------------------------------------
  * File:          $RCSfile: Matrix.h,v $
- * Date modified: $Date: 2003-02-21 21:21:20 $
- * Version:       $Revision: 1.24 $
+ * Date modified: $Date: 2003-02-25 05:17:00 $
+ * Version:       $Revision: 1.25 $
  * -----------------------------------------------------------------
  *
  *********************************************************** ggt-head end */
@@ -80,6 +80,30 @@ public:
    enum
    {
       Rows = ROWS, Cols = COLS
+   };
+
+   /** Helper class for Matrix op[].
+   * This class encapsulates the row that the user is accessing
+   * and implements a new op[] that passes the column to use
+   */
+   class RowAccessor
+   {
+   public:
+      RowAccessor(Matrix<DATA_TYPE,ROWS,COLS>* mat, const unsigned row)
+         : mMat(mat), mRow(row)
+      {
+         gmtlASSERT(row < ROWS);
+         gmtlASSERT(NULL != mat);
+      }
+
+      DATA_TYPE& operator[](const unsigned column)
+      {
+         gmtlASSERT(column < COLS);
+         return (*mMat)(mRow,column);
+      }
+
+      Matrix<DATA_TYPE,ROWS,COLS>*  mMat;
+      unsigned                      mRow;    /** The row being accessed */
    };
 
    /** describes the xforms that this matrix has been through. */
@@ -303,18 +327,19 @@ public:
    }
 
    /** bracket operator */
-   DATA_TYPE& operator[]( const unsigned i )
+   RowAccessor operator[]( const unsigned row )
    {
-      gmtlASSERT( i < (ROWS*COLS) );
-      return mData[i];
+      return RowAccessor(this, row);
    }
 
-   /** bracket operator */
+   /*
+   // racket operator
    const DATA_TYPE& operator[]( const unsigned i ) const
    {
       gmtlASSERT( i < (ROWS*COLS) );
       return mData[i];
    }
+   */
 
    /** Get a DATA_TYPE pointer to the matrix data
     * RETVAL: Returns a ptr to the head of the matrix data
